# ml_rosbag_extractor

./: CMakeLists.txt  README.md  package.xml
script/: multi_rosbag_extractor.bash  recoder_utils.py  single_rosbag_extractor.py  topic_utils.py
